--- a/fighter.ipynb
+++ b/fighter.ipynb
@@ -56699,7 +56699,16 @@
     }
    ],
    "source": [
-    "mean_reward, _ = evaluate_policy(model,env,render = True , n_eval_episodes= 5 )"
+    "mean_reward, _ = evaluate_policy(model,env,render = True , n_eval_episodes= 1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_reward"
    ]
   }
  ],
