--- a/zigzag.ipynb
+++ b/zigzag.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.8.20)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\danie\\miniconda3\\envs\\project_sonic\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -35,18 +43,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = PPO.load('./train_zigs/best_model_80000_zigzag.zip')"
+    "model = PPO.load('./train_zigs/best_model_13030000_zigzag.zip')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'env' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m mean_reward, _ \u001b[39m=\u001b[39m evaluate_policy(model,env,render \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m , n_eval_episodes\u001b[39m=\u001b[39m \u001b[39m5\u001b[39m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'env' is not defined"
+     ]
+    }
+   ],
    "source": [
     "mean_reward, _ = evaluate_policy(model,env,render = True , n_eval_episodes= 5 )"
    ]
